# mediapublic

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
client/: .eslintrc  .gitignore  README.md  gulpfile.js  package.json
client/app/: _bootstrap-custom.scss  config.js  config.json  index.jade  main.js  main.scss  router.js
client/app/_template/: collection.js  (+4 more)
client/public/: index.html
mockups/: findorganization.html  index.html  organizationhome.html  tiles.html
mockups/css/: findorganization.css  home.css  master.css  organizationhome.css  tiles.css
production/: mediapublic  notes.md
server/: .gitignore  .python-version  .travis.yml  MANIFEST.in  README.md  development.ini  orgs.json  popdb.py  production.ini  requirements.txt  test-requirements.txt  tox.ini
server/mediapublic/: .gitignore  MANIFEST.in  __init__.py  auth.py  constants.py  development.ini  exceptions.py  models.py  setup.cfg  setup.py  test-requirements.txt  validators.py  views.py
server/mediapublic/mediapublic/: __init__.py  models.py  tests.py  views.py
server/mediapublic/mediapublic/templates/: mytemplate.pt
server/mediapublic/mediapublic/tests/: __init__.py  api.py
server/mediapublic/scripts/: initializedb.py
server/mediapublic/templates/: logged_in.jinja2  login.jinja2
server/mediapublic/tests/: api.py  gabbi.ini
server/mediapublic/tests/gabbits/: help-request.yaml  howto.yaml  organization.yaml  people.yaml  playlist.yaml  recording.yaml  social_medias.yaml  status.yaml  user.yaml
server/mediapublic/tests/velruse_stub/: __init__.py  auth_info.json
(+155 files in other folders)
