[metadata]
name = mediapublic
author = 
author-email = 
summary = Mediapublic API server
description-file = README.md
license = GPLv3
classifier =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
keywords =
    web
    wsgi
    bfg
    pylons
    pyramid
[files]
packages =
    mediapublic
    mediapublic.scripts
    mediapublic.tests
[entry_points]
paste.app_factory =
    main = mediapublic:main
console_scripts =
    initialize_mediapublic_db = mediapublic.scripts.initializedb:main
